--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -17,6 +18,7 @@
     "googleapis": "^100.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.2",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "nodemailer": "^6.7.5"
   }
 }
